Web Inspector: [Sources] Invisible right sidebar issue https://bugs.webkit.org/show_bug.cgi?id=94924
Reviewed by Pavel Feldman.

Debugger sidebar resizer is now hidden when sidebar is hidden.
Debugger sidebar show button is moved to the upper right corner in this case.

* inspector/front-end/ScriptsPanel.js:
(WebInspector.ScriptsPanel.prototype._showDebuggerSidebar):
(WebInspector.ScriptsPanel.prototype.set _hideDebuggerSidebar):
* inspector/front-end/scriptsPanel.css:
(button.status-bar-item.scripts-debugger-show-hide-button):
(button.status-bar-item.scripts-debugger-show-hide-button:active):
(button.status-bar-item.scripts-debugger-show-hide-button.toggled-shown):
(button.status-bar-item.scripts-debugger-show-hide-button.toggled-shown:active):
(button.status-bar-item.scripts-debugger-show-hide-button.toggled-hidden):
(button.status-bar-item.scripts-debugger-show-hide-button.toggled-hidden:active):


Canonical link: https://commits.webkit.org/113287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127116 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/scriptsPanel.css
+++ b/Source/WebCore/inspector/front-end/scriptsPanel.css
@@ -258,7 +258,6 @@ button.status-bar-item.scripts-navigator-show-hide-button.toggled-overlay
 button.status-bar-item.scripts-debugger-show-hide-button {
     position: absolute;
     top: 0;
-    right: 16px;
     background-image: none;
     height: 16px;
     width: 16px;
@@ -268,7 +267,6 @@ button.status-bar-item.scripts-debugger-show-hide-button {
 
 button.status-bar-item.scripts-debugger-show-hide-button:active {
     top: 1px;
-    right: 15px;
 }
 
 .status-bar-item.scripts-debugger-show-hide-button > .glyph {
@@ -277,8 +275,24 @@ button.status-bar-item.scripts-debugger-show-hide-button:active {
     -webkit-mask-image: url(Images/navigatorShowHideButton.png);
 }
 
+button.status-bar-item.scripts-debugger-show-hide-button.toggled-shown {
+    right: 16px;
+}
+
+button.status-bar-item.scripts-debugger-show-hide-button.toggled-shown:active {
+    right: 15px;
+}
+
 .status-bar-item.scripts-debugger-show-hide-button.toggled-shown > .glyph {
     -webkit-mask-position: 0 -16px;
+}
+
+button.status-bar-item.scripts-debugger-show-hide-button.toggled-hidden {
+    right: 1px;
+}
+
+button.status-bar-item.scripts-debugger-show-hide-button.toggled-hidden:active {
+    right: 0px;
 }
 
 .status-bar-item.scripts-debugger-show-hide-button.toggled-hidden > .glyph {
